<resources>
    <string name="app_name">LV2-1-InspiringPerson</string>
    <string name="add_person">Add Person</string>
    <string name="view_people">View People</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="date_of_birth">Date of Birth:</string>
    <string name="status">Status:</string>
    <string name="date_of_death">Date of Death:</string>
    <string name="quotes">Quotes:</string>
    <string name="nameHolder">Name...</string>
    <string name="surnameHolder">Surname...</string>
    <string name="_19_05_2020">19/05/2020</string>
    <string name="_21_05_2020">21/05/2020</string>
    <string name="alive">Alive</string>
    <string name="dead">Dead</string>
    <string name="quotesExample">You need to put quote in quotation marks, between quotes you need comma and on the and of quotes you need /0. Example: \"This is first quote\", \"This is second quote\"/0</string>
    <string name="short_description">Short description</string>
    <string name="description">Description:</string>
    <string name="submit">Submit</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="choose_image">Choose Image</string>
</resources>
